lang/examples/good/03-03-int-operators.wdr
fun main(): Void {
  var a: Int = 42;
  printInt(a);
  a--;
  printInt(a);
  a++;
  printInt(a);

  return;
}