lang/examples/bad/03-03-int-operators.wdr
fun main(): Void {
  var a: Int = 42;
  a---;
  a+;

  return;
}